Issue #1003820 by c4rl, fearlsgroove: Increase font and form element color contrast

--- a/core.css
+++ b/core.css
@@ -257,7 +257,7 @@ table .item-list,
 .form-item label {
   margin:0px;
   padding:0px;
-  color:#999;
+  color:#666;
   font-weight:bold;
   font-size:10px;
   text-transform:uppercase;
@@ -362,7 +362,7 @@ select.form-select {
   padding:3px;
   border-width:1px;
   border-style:solid;
-  border-color:#eee;
+  border-color:#ccc;
   background:#fff;
   color:#666;
   max-width:100%;
@@ -459,7 +459,7 @@ body.page-admin div.vertical-tabs .vertical-tabs-panes .vertical-tabs-pane field
 
   .collapsed .fieldset-legend a {
     background:#eee;
-    color:#999;
+    color:#484848;
     }
 
   .collapsed .fieldset-legend a:hover { color:#666; }
@@ -612,7 +612,7 @@ form .form-actions {
 
 .system-themes-list-disabled .theme-selector {
   background:#eee;
-  color:#999;
+  color:#676767;
   }
 
 /* admin/content/node & admin/user/user */
@@ -763,7 +763,7 @@ body.tao #admin-toolbar a.menu-hover span.menu-description span.icon {
   text-shadow:#fff 0px 1px 0px;
   padding:5px 10px 4px 10px;
   border-bottom:1px solid #ddd;
-  color:#999;
+  color:#666;
   }
 
 .vertical-tabs-list .selected a {
