--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body.tao {
   }
 
 a {
-  color:#59a;
+  color:#008eb1;
   text-decoration:none;
   }
 
